# fastapi_open_feature_service

./: .gitignore  README.md  pyproject.toml
src/app/: main.py
src/app/api/: schemas.py
src/app/api/feature_flags/: feature_flag_routers.py  feature_flag_services.py
src/app/api/feature_flags/domain/: feature_flag_models.py  feature_flag_repositories.py  feature_flag_schemas.py
src/app/api/feature_flags/exceptions/: feature_flag_exceptions.py
src/app/api/feature_flags/repositories/: abstract_repositorie.py  feature_flag_repositories.py  flag_repositorie.py
src/app/api/feature_flags/routers/: feature_flag_router.py  flag_router.py
src/app/api/feature_flags/schemas/: feature_flag_schemas.py  flag_schemas.py
src/app/api/feature_flags/services/: feature_flag_services.py  flag_service.py
src/app/api/routers/: feature_flags.py
src/app/api/v1/feature_flags/domain/: flag_context_model.py  flag_model.py
src/app/core/: abstract_repository.py  abstract_service.py  database.py  exceptions.py  settings.py
src/app/models/: feature_flag.py  timestamp_mixin.py
src/app/services/: database.py
src/app/settings/: database.py
tasks/: task00.md  task007.md  task008.md  task009.md  task01.md  task02.md  task03.md  task04.md  task05.md  task06.md  task07.md  task08.md  task09.md  task10.md
tests/: conftest.py  test_app.py  test_feature_flag_repositorie.py  test_feature_flag_router.py  test_feature_flag_service.py  test_flag_repositorie.py  test_flag_router.py  test_flag_service.py
tests/v1/: test_flag_repositorie.py  test_flag_repository.py  test_flag_router.py  test_flag_service.py
tests/v1/feature_flags/: test_flag_router.py  test_flag_service.py
(+9 files in other folders)
