[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "owhenrique",email = "me.pauloalmeida@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13<4"
dependencies = [
    "fastapi[standard] (>=0.122.0,<0.123.0)",
    "uvicorn[standard] (>=0.38.0,<0.39.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)"
]

[tool.poetry]
packages = [{include = "app", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
